// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project|AddUser List 1`] = `
.c5 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c8 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c9 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c10 a,
.c10 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c11 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c6 {
  word-break: break-word;
}

.c7 {
  word-break: break-word;
}

.c19 {
  height: 155px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c20 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c22 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c1 {
  display: none;
}

.c2 {
  margin-right: 20px;
  overflow: hidden;
}

.c3 {
  color: #FFF;
}

.c4 {
  color: #FFF;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5px 0;
  padding: 10px 0;
  color: #71737e;
  border-top: 2px solid #2F2F36;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  background-color: transparent !important;
}

.c15 {
  font-size: 20px;
}

.c16 {
  font-size: 14px;
  word-break: break-all;
  margin-top: 5px;
}

@media (min-width:1050px) {
  .c5 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c8 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c21 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c20 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c22 {
    width: 240px;
  }
}

@media (min-width:1050px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h2
          className="c3"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Users
        </h2>
        <h1
          className="c4"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Add Users
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c5"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c6"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Users
            </h2>
            <h1
              className="c7"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Add Users
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c6"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Users
            </h2>
            <h1
              className="c7"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Add Users
            </h1>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1"
                id="projectDetailsNavBtn"
                onClick={[Function]}
              >
                Project details
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/datasource"
                id="dataSourceNavBtn"
                onClick={[Function]}
              >
                Data Sources
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/state"
                id="stateNavBtn"
                onClick={[Function]}
              >
                States
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/user"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Project Users
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/folder"
                id="folderNavBtn"
                onClick={[Function]}
              >
                Pages
              </a>
            </div>
          </div>
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c10"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c11"
          >
            <a
              className="c12"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c12"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c12"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c13"
    >
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          Dale Chihuly
        </div>
        <div
          className="c16"
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </div>
      </div>
      <div
        className="c17"
      >
        <button
          className="c18"
          disabled={false}
          id="addUserPlusButton0"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 42,
              "margin": "0",
              "minHeight": 42,
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 42,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 42,
                "shapeRendering": "crispEdges",
                "width": 42,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c13"
    >
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          Dave Bowie
        </div>
        <div
          className="c16"
        />
      </div>
      <div
        className="c17"
      >
        <button
          className="c18"
          disabled={false}
          id="addUserPlusButton1"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 42,
              "margin": "0",
              "minHeight": 42,
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 42,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 42,
                "shapeRendering": "crispEdges",
                "width": 42,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c13"
    >
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          Pellentesque a massa at purus cursus egestas. Aliquam ut vehicula. Praesent est erat, laoreet et ornare ullamcorper, finibus id nisl. Etiam tempor, ligula a sagittis
        </div>
        <div
          className="c16"
        >
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </div>
      </div>
      <div
        className="c17"
      >
        <button
          className="c18"
          disabled={false}
          id="addUserPlusButton2"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": 42,
              "margin": "0",
              "minHeight": 42,
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 42,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": 42,
                "shapeRendering": "crispEdges",
                "width": 42,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c19"
    >
      <div
        className="c20"
      >
        <div
          className="c21"
        >
          <button
            className="c22"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            Back
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project|AddUser No data 1`] = `
.c5 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c8 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c9 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c10 a,
.c10 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c11 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c6 {
  word-break: break-word;
}

.c7 {
  word-break: break-word;
}

.c14 {
  height: 155px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c15 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c17 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c1 {
  display: none;
}

.c2 {
  margin-right: 20px;
  overflow: hidden;
}

.c3 {
  color: #FFF;
}

.c4 {
  color: #FFF;
}

.c13 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

@media (min-width:1050px) {
  .c5 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c8 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c15 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c17 {
    width: 240px;
  }
}

@media (min-width:1050px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h2
          className="c3"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Users
        </h2>
        <h1
          className="c4"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Add Users
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c5"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c6"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Users
            </h2>
            <h1
              className="c7"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Add Users
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c6"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Users
            </h2>
            <h1
              className="c7"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Add Users
            </h1>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/user/"
                id="usersPageNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1"
                id="projectDetailsNavBtn"
                onClick={[Function]}
              >
                Project details
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/datasource"
                id="dataSourceNavBtn"
                onClick={[Function]}
              >
                Data Sources
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/state"
                id="stateNavBtn"
                onClick={[Function]}
              >
                States
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/user"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Project Users
              </a>
            </div>
            <div
              className="c10"
            >
              <a
                href="/project/1/folder"
                id="folderNavBtn"
                onClick={[Function]}
              >
                Pages
              </a>
            </div>
          </div>
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c10"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c11"
          >
            <a
              className="c12"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c12"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c12"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c13"
    >
      No users with role Editor available
    </div>
    <div
      className="c14"
    >
      <div
        className="c15"
      >
        <div
          className="c16"
        >
          <button
            className="c17"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            Back
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
